# weather-mcp

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
mcp-chat/: README.md  pyproject.toml
mcp-chat/src/mcp_chat/: __init__.py  __main__.py
mcp-chat/src/mcp_chat/adapters/: __init__.py  mcp_client.py
mcp-chat/src/mcp_chat/adapters/llm/: __init__.py  anthropic_adapter.py  message_converter.py  openai_adapter.py
mcp-chat/src/mcp_chat/adapters/transport/: __init__.py  session_adapter.py  stdio_transport.py
mcp-chat/src/mcp_chat/application/: __init__.py  agent_service.py  config.py  observability.py  tool_buffer.py
mcp-chat/src/mcp_chat/domain/: __init__.py  conversation.py  errors.py
mcp-chat/src/mcp_chat/ports/: __init__.py  llm.py  mcp_client.py  mcp_transport.py
mcp-chat/src/mcp_chat/transport/: __init__.py  cli.py
mcp-chat/tests/: __init__.py  conftest.py
mcp-chat/tests/integration/: __init__.py  test_agent_integration.py  test_e2e_integration.py  test_llm_adapters_integration.py  test_mcp_client_integration.py  test_observability_integration.py  test_repl_loop.py  test_signal_handling.py
mcp-chat/tests/unit/: __init__.py  test_agent_service.py  test_cli_renderer.py  test_config.py  test_domain.py  test_llm_adapters.py  test_mcp_client_adapter.py  test_observability.py  test_tool_buffer.py
mcp-server/: pyproject.toml
mcp-server/src/mcp_server/: __main__.py
mcp-server/src/mcp_server/adapters/: __init__.py  geocoding.py  http_adapter.py  weather.py
mcp-server/src/mcp_server/application/: __init__.py  config.py  weather_service.py
mcp-server/src/mcp_server/domain/: __init__.py  errors.py  weather.py
mcp-server/src/mcp_server/ports/: __init__.py  geocoding.py  weather.py
mcp-server/src/mcp_server/transport/: __init__.py  mcp_handler.py
mcp-server/tests/: __init__.py  conftest.py
mcp-server/tests/integration/: __init__.py  test_error_paths.py  test_mcp_server_integration.py  test_open_meteo_integration.py
mcp-server/tests/unit/: __init__.py  test_domain.py  test_mcp_handler.py  test_weather_service.py  test_wmo_mapping.py
