[project]
name = "mcp-chat"
version = "0.1.0"
description = "CLI agent using LLM tool-calling to invoke MCP weather tools"
readme = "README.md"
authors = [
    { name = "adrian", email = "adri.benavides312@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
    "anthropic>=0.35.0,<1.0.0",
    "openai>=1.64.0,<2.0.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    "beartype>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
mcp-chat = "mcp_chat:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.poe.tasks]
format = [
    { cmd = "uv run ruff check --select I --fix" },
    { cmd = "uv run ruff format" },
]
lint = [
    "format",
    { cmd = "uv run ruff check --select I" },
    { cmd = "uv run ruff format --check" },
    { ref = "lint-types" },
]
lint-types = [{ cmd = "uv run mypy src" }]
