[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP server exposing get_current_weather tool via Open-Meteo API"
readme = "README.md"
authors = [
    { name = "adrian", email = "adri.benavides312@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    "beartype>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
mcp-server = "mcp_server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.poe.tasks]
format = [
    { cmd = "uv run ruff check --select I --fix" },
    { cmd = "uv run ruff format" },
]
lint = [
    "format",
    { cmd = "uv run ruff check --select I" },
    { cmd = "uv run ruff format --check" },
    { ref = "lint-types" },
    { ref = "lint-imports" },
]
lint-types = [{ cmd = "uv run mypy src" }]
lint-imports = [{ cmd = "uv run lint-imports" }]
test = [{ cmd = "uv run pytest tests -v ${PYTEST_ARGS:-}" }]

[tool.importlinter]
root_packages = ["mcp_server"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "httpx isolated to adapters"
type = "forbidden"
source_modules = [
    "mcp_server.domain",
    "mcp_server.ports",
    "mcp_server.application",
    "mcp_server.transport",
]
forbidden_modules = ["httpx"]
# ignore transitive httpx dependency
ignore_imports = [
    "mcp_server.transport.mcp_handler -> mcp_server.adapters.geocoding",
    "mcp_server.transport.mcp_handler -> mcp_server.adapters.weather",
]

[[tool.importlinter.contracts]]
name = "domain has no infrastructure dependencies"
type = "forbidden"
source_modules = ["mcp_server.domain"]
forbidden_modules = [
    "mcp_server.adapters",
    "mcp_server.application",
    "mcp_server.transport",
    "httpx",
    "structlog",
]

[[tool.importlinter.contracts]]
name = "ports depend only on domain"
type = "forbidden"
source_modules = ["mcp_server.ports"]
forbidden_modules = [
    "mcp_server.adapters",
    "mcp_server.application",
    "mcp_server.transport",
    "httpx",
]